# LibraryAPI

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  data.py  docker-compose.yml  example-docker.env  example-local.env  init-replication.sql  main.py  models.py  pyproject.toml  requirements.txt  setup-replication.sh  utils.py
app/: database.py  index.html  main.py  models.py
app/migrations/: env.py
library_service/: api.py  auth.py  main.py  settings.py
library_service/auth/: __init__.py  core.py  recovery.py  seed.py  totp.py
library_service/middlewares/: __init__.py  catch_exception.py  log_request.py  not_found_handler.py
library_service/models/: __init__.py  enums.py
library_service/models/db/: __init__.py  author.py  book.py  genre.py  links.py  role.py  user.py
library_service/models/dto/: __init__.py  author.py  book.py  combined.py  genre.py  loan.py  misc.py  recovery.py  role.py  token.py  user.py
library_service/routers/: __init__.py  auth.py  authors.py  books.py  cap.py  genres.py  llm.py  loans.py  misc.py  relationships.py  users.py
library_service/services/: __init__.py  captcha.py  describe_er.py  embeddings.py  image_processing.py
library_service/static/: 2fa.js  analytics.js  auth.js  author.js  authors.js  base.js  book.js  books.js  create_author.js  create_book.js  create_genre.js  edit_book.js  edit_genre.js  index.js  my_books.js  profile.js  script.js  styles.css  users.js  utils.js
library_service/static/page/: 2fa.js  analytics.js  auth.js  author.js  authors.js  book.js  books.js  create_book.js  create_genre.js  edit_author.js  edit_book.js  edit_genre.js  my_books.js  profile.js  unknown.js  users.js
library_service/templates/: 2fa.html  analytics.html  api.html  auth.html  author.html  authors.html  base.html  book.html  books.html  create_author.html  create_book.html  create_genre.html  edit_author.html  edit_book.html  edit_genre.html  index.html  my_books.html  profile.html  unknown.html  users.html
migrations/: env.py  script.py.mako
migrations/versions/: 02ed6e775351_loans.py  6c616cc9d1f0_book_vector_search.py  9d7a43ac5dfc_genres.py  a585fd97b88c_recovery_codes_and_totp.py  a8e40ab24138_role_payroll.py  abbc38275032_book_preview.py  b838606ad8d1_auth.py  c5dfc16bdc66_book_page_count.py  d266fdc61e99_init.py
src/app/: database.py  main.py
src/app/migrations/: env.py
src/app/migrations/versions/: d266fdc61e99_init.py
src/app/models/: __init__.py  author.py  book.py  links.py
src/app/routers/: __init__.py  authors.py  books.py  misc.py  relationships.py
src/app/templates/: index.html
tests/: README.md  mock_app.py  test_authors.py  test_books.py  test_main.py  test_misc.py  test_relationships.py
tests/mock_routers/: authors.py  books.py  genres.py  relationships.py
tests/mocks/: mock_session.py  mock_storage.py
