[tool.poetry]
name = "LibraryAPI"
version = "0.3.0"
description = "Это простое API для управления авторами, книгами и их жанрами."
authors = ["wowlikon"]
readme = "README.md"
packages = [{ include = "library_service" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["all"], version = "^0.115.12" }
uvicorn = { extras = ["standard"], version = "^0.40.0" }
psycopg2-binary = "^2.9.10"
alembic = "^1.16.1"
python-dotenv = "^0.21.0"
sqlmodel = "^0.0.24"
jinja2 = "^3.1.6"
toml = "^0.10.2"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["argon2"], version = "^1.7.4"}
aiofiles = "^25.1.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
json-log-formatter = "^1.1.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"
isort = "^7.0.0"
pytest-asyncio = "^1.3.0"
pylint = "^4.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
