[project]
name = "LibraryAPI"
version = "0.5.0"
description = "Это простое API для управления авторами, книгами и их жанрами."
authors = [{ name = "wowlikon" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "toml>=0.10.2",
    "python-dotenv>=0.21.1",
    "uvicorn[standard]>=0.40.0",
    "pydantic[email]>=2.12.5",
    "fastapi[all]>=0.115.14",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.18.0",
    "sqlmodel>=0.0.31",
    "json-log-formatter>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "passlib[argon2]>=1.7.4",
    "aiofiles>=25.1.0",
    "qrcode[pil]>=8.2",
    "pyotp>=2.9.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "pylint>=4.0.4",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["library_service"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
